# zzatools

./: .gitignore  .sync-conflict-20200429-144929-MFQXGJY.gitignore  CMakeLists.txt  Release - Shortcut (3).lnk  Release - Shortcut.lnk  calendar_view.cpp  calendar_view.h  dev - Shortcut.lnk  qsl_form.cpp  qsl_form.h  readme.txt  rose.xcf  zza7300.sync-conflict-20200211-130619-MFQXGJY.vcxproj  zza7300.vcxproj  zza7300.vcxproj.filters  zzalib1.vcxproj  zzalib1.vcxproj.filters  zzalog.sln  zzalog.sync-conflict-20191118-151651-MFQXGJY.vcxproj  zzalog.sync-conflict-20200118-164649-MFQXGJY.vcxproj  zzalog.sync-conflict-20200322-152751-MFQXGJY.vcxproj  zzalog.sync-conflict-20200322-153832-MFQXGJY.vcxproj  zzalog.vcxproj  zzalog.vcxproj.filters  zzaportm.vcxproj  zzatools.sln  zzatools.sync-conflict-20200115-165331-MFQXGJY.sln
QBS/: Makefile  QBS.vcxproj  QBS.vcxproj.filters  QBS_consts.h  QBS_data.cpp  QBS_data.h  QBS_import.cpp  QBS_import.h  QBS_main.cpp  QBS_notes.cpp  QBS_notes.h  QBS_process.cpp  QBS_process.h  QBS_reader.cpp  QBS_reader.h  QBS_reporter.cpp  QBS_reporter.h  QBS_start.cpp  QBS_start.h  QBS_window.cpp  QBS_window.h  QBS_writer.cpp  QBS_writer.h  qbs.xcf
api/: CMakeLists.txt  Doxyfile.in
common/: CMakeLists.txt
common/include/: callback.h  drawing.h  gpio.h  utils.h  xml_element.h  xml_reader.h  xml_writer.h
common/src/: gpio.cpp  utils.cpp  xml_element.cpp  xml_reader.cpp  xml_writer.cpp
fft_test/: Makefile
gpio_test/: gpio_test.cpp  gpio_test.vcxproj  gpio_test.vcxproj.filters
print_test/: FLTK.ps  Makefile
pugixml/: CMakeLists.txt
reference/: Bands.csv  CQZone.csv  CQZone.lst  CallDxcc.lst  City.lst  Continents.csv  Countries.csv  DXCC.txt  Former Countries.csv  Former Info.csv  ITUZone.csv  ITUZone.lst  Island.lst  Modes.csv  Modes.lst  Prefix.lst  QSLLabels.wps  Readme.txt  Specials.csv  Territories.csv  adif.csv  all - Copy.xml  all.313.xml  all.json  all.xml  appfields.tsv  band_plan.json  band_plan.tsv  cty.csv  cty.sync-conflict-20191116-162054-MFQXGJY.tsv  cty.sync-conflict-20191118-150124-MFQXGJY.tsv  cty.sync-conflict-20191202-160806-MFQXGJY.tsv  cty.sync-conflict-20191202-160910-MFQXGJY.tsv  cty.sync-conflict-20191212-160148-MFQXGJY.tsv  cty.sync-conflict-20191222-222455-MFQXGJY.tsv  cty.sync-conflict-20200207-154451-MFQXGJY.tsv  cty.sync-conflict-20200314-164753-MFQXGJY.tsv  cty.sync-conflict-20200326-151745-MFQXGJY.tsv  cty.sync-conflict-20200403-152923-MFQXGJY.tsv  cty.sync-conflict-20200428-160331-MFQXGJY.tsv  (+9 more)
sarkan/: sarkan.sln  sarkan.vcxproj.filters
userguide/: CMakeLists.txt  Doxyfile.in
userguide/src/: adding.dox  analysis.dox  application.dox  banner.dox  basic1.dox  basic2.dox  config.dox  installation.dox  main_window.dox  menu.dox  new_rig.dox  qso_net_entry.dox  qso_qsl_vwr.dox  quick_start.dox  release_notes.dox  search_dialog.dox
zza7300/: main73.cpp  menu73.cpp  menu73.h  rig_dgl73.cpp  rig_dgl73.h  view73.cpp  view73.h  view73.sync-conflict-20200303-155644-MFQXGJY.cpp  view73.sync-conflict-20200305-142234-MFQXGJY.cpp  view73.sync-conflict-20200306-154826-MFQXGJY.cpp  view73.sync-conflict-20200306-155757-MFQXGJY.cpp
zza_keyer/: zza_keyer.vcxproj  zza_keyer.vcxproj.filters
zzalib/: callback.h  callback.sync-conflict-20200117-170011-MFQXGJY.h  callback.sync-conflict-20200802-161550-MFQXGJY.h  drawing.h  drawing.sync-conflict-20200117-163424-MFQXGJY.h  formats.h  ic7300.cpp  ic7300.h  ic7300.sync-conflict-20200316-165102-MFQXGJY.cpp  page_dialog.cpp  page_dialog.h  power_matrix.cpp  power_matrix.h  rig_if.cpp  rig_if.h  rig_if.sync-conflict-20210205-144751-MFQXGJY.cpp  rpc_data_item.cpp  rpc_data_item.h  rpc_handler.cpp  rpc_handler.h  serial.cpp  serial.h  socket_server.cpp  socket_server.h  socket_server.sync-conflict-20200907-151809-MFQXGJY.cpp  socket_server.sync-conflict-20200911-134803-MFQXGJY.cpp  socket_server.sync-conflict-20200911-145506-MFQXGJY.cpp  url_handler.cpp  url_handler.h  utils.cpp  utils.h  versionh.h  win_dialog.cpp  win_dialog.h  xml_element.cpp  xml_element.h  xml_reader.cpp  xml_reader.h  xml_writer.cpp  xml_writer.h
zzalib.old/: drawing.h  serial.h  utils.cpp  utils.h
zzalib1/: callback.h  drawing.h  pch.h  serial.cpp  serial.h  utils.cpp  utils.h  zzalib1.vcxitems
zzalibsave/: drawing.h
zzalog/: Doxyfile  Doxyfile_code  FLTK.ps  Makefile  ZZALOG.aip  about_dialog.cpp  about_dialog.h  adi_reader.cpp  adi_reader.h  book.cpp  (+213 more)
zzalog_fe/: CMakeLists.txt  Doxyfile_code  Makefile  ZZALOG.aip  zzalog.sln  zzalog.vcxproj.filters  zzalog_fe.vcxproj  zzalog_fe.vcxproj.filters
zzalog_fe/include/: about_dialog.h  adi_writer.h  adx_handler.h  band_data.h  band_widget.h  book.h  condx_view.h  contest_algorithm.h  contest_data.h  corr_dialog.h  cty1_reader.h  cty2_reader.h  cty_data.h  cty_element.h  eqsl_handler.h  extract_data.h  field_choice.h  fields.h  file_holder.h  font_dialog.h  icons.h  init_dialog.h  main.h  main_window.h  menu.h  page_dialog.h  png_writer.h  printer.h  qrz_handler.h  qsl_data.h  qsl_dataset.h  qsl_display.h  qsl_editor.h  qsl_image.h  qso_apps.h  qso_buttons.h  qso_clock.h  qso_clocks.h  qso_entry.h  qso_log.h  (+29 more)
zzalog_fe/include/contests/: basic.h  iaru_hf.h
zzalog_fe/src/: about_dialog.cpp  adi_reader.cpp  adi_writer.cpp  adx_handler.cpp  band_data.cpp  band_widget.cpp  band_window.cpp  banner.cpp  book.cpp  calendar.cpp  calendar_input.cpp  change_dialog.cpp  club_handler.cpp  condx_view.cpp  contest_algorithm.cpp  contest_data.cpp  contest_dialog.cpp  corr_dialog.cpp  cty1_reader.cpp  cty2_reader.cpp  cty3_reader.cpp  cty_data.cpp  cty_dialog.cpp  dxcc_table.cpp  dxcc_view.cpp  eqsl_handler.cpp  extract_data.cpp  field_choice.cpp  fields.cpp  file_holder.cpp  file_viewer.cpp  fllog_emul.cpp  font_dialog.cpp  init_dialog.cpp  intl_dialog.cpp  log_table.cpp  lotw_handler.cpp  main.cpp  menu.cpp  png_writer.cpp  (+47 more)
zzalog_fe/src/contests/: basic.cpp  iaru_hf.cpp
zzalog_fe/userguide/src/: change_dialog.dox  index.dox  log_table.dox  qsl_editor.dox  qso_apps.dox  qso_entry.dox  qso_operation.dox  qso_rig.dox  qso_wx.dox  reference.dox  searching.dox  web_dialog.dox
(+604 files in other folders)
